# CloudCon----102

./: CMakeLists.txt
src/: AppConfigStore.cpp  AppConfigStore.h  AppController.cpp  AppController.h  CacheManager.cpp  CacheManager.h  ClipboardManager.cpp  ClipboardManager.h  CloudProvider.h  FileItem.h  ImagePreviewWindow.cpp  ImagePreviewWindow.h  LocalFsProvider.cpp  LocalFsProvider.h  LocalWorkspaceManager.cpp  LocalWorkspaceManager.h  MainWindow.cpp  MainWindow.h  MetadataStore.cpp  MetadataStore.h  MockCloudProvider.cpp  MockCloudProvider.h  NotificationManager.cpp  NotificationManager.h  Operation.h  PendingOperationsStore.cpp  PendingOperationsStore.h  SystemIntegration.cpp  SystemIntegration.h  TaskManager.cpp  TaskManager.h  YandexDiskClient.cpp  YandexDiskClient.h  YandexOAuthClient.cpp  YandexOAuthClient.h  main.cpp
